rlx-mlx-sys/src/ffi.rs


    pub fn rlx_mlx_op_quantized_matmul(
        x: *mut mlx_array_t,
        w: *mut mlx_array_t,
        scales: *mut mlx_array_t,
        biases_or_null: *mut mlx_array_t,
        transpose: c_int,
        group_size: c_int,
        bits: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_categorical(
        logits: *mut mlx_array_t,
        axis: c_int,
        seed: u64,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_argmax(
        a: *mut mlx_array_t,
        axis: c_int,
        keep_dim: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_slice_strided(
        a: *mut mlx_array_t,
        start: *const c_int,
        stop: *const c_int,
        strides: *const c_int,
        ndim: usize,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_pad(
        a: *mut mlx_array_t,
        low: *const c_int,
        high: *const c_int,
        ndim: usize,
        pad_value: c_float,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_topk_values(
        a: *mut mlx_array_t,
        k: c_int,
        axis: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_sort(a: *mut mlx_array_t, axis: c_int, out: *mut *mut mlx_array_t) -> c_int;

    pub fn rlx_mlx_compile(
        fn_ptr: LowerFn,
        ud: *mut c_void,
        shapeless: c_int,
        out: *mut *mut mlx_compiled_t,
    ) -> c_int;

    pub fn rlx_mlx_compiled_call(
        compiled: *mut mlx_compiled_t,
        inputs: *const *mut mlx_array_t,
        n_inputs: usize,
        out_outputs: *mut *mut mlx_array_t,
        cap: usize,
        out_n_outputs: *mut usize,
    ) -> c_int;

    pub fn rlx_mlx_compiled_free(compiled: *mut mlx_compiled_t);
}

#[repr(C)]
pub struct mlx_compiled_t {
    _private: [u8; 0],
}

/// Type of the lowering callback that crosses FFI into C++ for the
/// mlx::compile path. Returns `RLX_MLX_OK` on success, anything else
/// is treated as an error and the C++ wrapper throws.
pub type LowerFn = unsafe extern "C" fn(
    ud: *mut c_void,
    inputs: *const *mut mlx_array_t,
    n_inputs: usize,
    out_outputs: *mut *mut mlx_array_t,
    cap: usize,
    out_n_outputs: *mut usize,
) -> c_int;

// Silence unused-import lint when c_void isn't referenced elsewhere.
#[allow(dead_code)]
const _: *const c_void = std::ptr::null();
